Fixed bug that caused messages to be logged to all consoles in a window rather than the console associated with the editor that triggered the message.  Set textareas to display as blocks rather than wrapping them in divs.  Misc styling.

--- a/static-files/css/base.css
+++ b/static-files/css/base.css
@@ -247,6 +247,10 @@ textarea.jetpack-lab-editor-code {
     padding: 1em;
 }
 
+.jetpack-lab-editor-buttons {
+    text-align: right;
+}
+
 textarea.jetpack-lab-editor-console {
     margin-top: 1em;
 }
